Changelog
=========

1.5.1 (unreleased)
------------------

- Nothing changed yet.


1.5.0 (2015-05-06)
------------------

- Update French translations.
  [jone]

- Disable ``auto-insert`` in ``dates`` field because of validation.
  [jone]

- Update German translations.
  [jone]

- i18n engine fixes [keul]
- Added italian translation [keul]
- Now using (and requiring) DataGridField 1.9+ and new features like required
  columns, column's description and DateColumn [keul]
- Restored "View" object action [keul]

1.4.2 (2015-04-30)
------------------

- Fix typo in the 'users' field of PoodleSchema: multivalued ->
  multiValued [cillianderoiste]


1.4.1 (2014-06-11)
------------------

- Fix saveing votes, since the form only works with js.
  [mathias.leimgruber]


1.4.0 (2014-03-31)
------------------

- Update French translations.
  [tschanzt]

- Sort users by normalized fullname.
  [mathias.leimgruber]

- Plone 4.3 compatibility
  [mathias.leimgruber]


1.3.4 (2013-08-23)
------------------

- Fix post request (save poodle votes).
  [mathias.leimgruber]


1.3.3 (2013-08-14)
------------------

- Add permissionmapping for ftw.lawgiver
  [elioschmutz]


1.3.2 (2013-07-05)
------------------

- Fixes javascript error on IE8
   [href]


1.3.1 (2013-04-17)
------------------

- Replace jq by $.
  [mathias.leimgruber]


1.3 (2012-11-22)
----------------

- Public release on pypi / plone.org
  [jone]


1.2 (2012-08-21)
----------------

- Adjust Notification Adapters: so that the regular notification of a poodle works still fine.
  [phgross]

- Fix: Do no override Owner role.
  [mathias.leimgruber]

- Fix: Use nested persistentMappings/Lists.
  [phgross]

- Use ftw.notification.email for email notification.
  [phgross]

- Added tests.
  [phgross]

- Updated workfow: do not allow Member to see all poodles.
  [Julian Infanger]


1.1.4 (2012-06-13)
------------------

- Translate workflow transitions
  [mathias.leimgruber]


1.1.3 (2012-05-14)
------------------
